# documind-enterprise

./: .gitignore  PROJECT_OVERVIEW.md  README.md  SKILL.md  docker-compose.yml
documind/: .env.example  Dockerfile  PHASE_3_1_EXPLAINED.md  __init__.py  alembic.ini  apply_langfuse.py  pyproject.toml  requirements.txt
documind/app/: main.py
documind/app/api/v1/: dependencies.py  router.py
documind/app/api/v1/endpoints/: admin.py  audit.py  auth.py  documents.py  query.py  query_stream.py  status.py
documind/app/core/: config.py  exceptions.py  logging.py  security.py
documind/app/models/: __init__.py  database.py  document.py  query.py  tenant.py  usage.py
documind/app/schemas/: auth.py  document.py  query.py
documind/app/services/: auth_service.py
documind/app/services/cache/: __init__.py  semantic_cache.py
documind/app/services/generation/: judge.py  llm_client.py  llm_client_stream.py  prompt_builder.py
documind/app/services/ingestion/: chunker.py  embedder.py  ingestor.py  pdf_processor.py  uploader.py
documind/app/services/quotas/: rate_limiter.py  usage_tracker.py
documind/app/services/retrieval/: bm25_search.py  hybrid_fusion.py  reranker.py  semantic_search.py
documind/app/workers/: celery_app.py  tasks.py
documind/migrations/alembic/: env.py
documind/migrations/alembic/versions/: 68cf0fd70183_initial_schema.py
documind/scripts/: check_db.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: auth-guard.tsx
frontend/src/lib/: api-client.ts
(+15 files in other folders)
