[tool.poetry]
name = "documind"
version = "0.1.0"
description = "Multi-Tenant RAG SaaS Platform"
authors = ["Your Name <you@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
celery = "^5.4.0"
structlog = "^24.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
openai = "^1.35.0"
pinecone = "^4.1.0"
cohere = "^5.5.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
pypdf = "^4.2.0"
pymupdf = "^1.24.0"
langfuse = "^2.36.0"
prometheus-fastapi-instrumentator = "^7.0.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
flake8 = "^7.1.0"
mypy = "^1.10.0"
locust = "^2.29.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
